# Real-time_clock_that_combines_weather_information_and_air_quality

./: README.md  Tóm Tắt.docx
IoT Web/: .firebaserc  Layout.css  Layout.html  Layout.js  login.css  login.html  login.js
Schematic - PCB/: PCB_PCB_DA2_fix_2_2023-07-17.json  SCH_DA2_fix_2023-07-17.json
Source Code/libraries/Firebase_ESP32_Client/: README.md  library.properties
Source Code/libraries/Firebase_ESP32_Client/src/: FirebaseESP32.cpp  FirebaseESP32.h
Source Code/libraries/SMTP/: SMTPClient.cpp  SMTPClient.h
Source Code/libraries/TFT_eSPI/: User_Setup.h
Source Code/libraries/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h
Source Code/libraries/ui/src/components/: ui_comp.h  ui_comp_date.c  ui_comp_dategroup.h  ui_comp_hook.c  ui_comp_hook.h
Source Code/libraries/ui/src/images/: ui_img_216451335.c  ui_img_backblack_png.c  ui_img_bggg_png.c  ui_img_clock_min_png.c  ui_img_clock_sec_png.c  ui_img_clouds_png.c  ui_img_sun_png.c
Source Code/libraries/ui/src/screens/: ui_HOME.c  ui_SETALARM.c  ui_SETALARM1.c  ui_SETDAYTIME.c  ui_SETTIME.c  ui_SET_DATE.c
Source Code/ui/: ui.ino
Tài Liệu Giao Tiếp Module Rời - Tài Liệu Hướng Dẫn/: 03 Giao tiếp module MQ135 - .docx  Tài Liệu Hướng Dẫn Sử Dụng phần mềm EasyEDA Pro vẽ hộp đựng PCB.docx  Tài Liệu Tham Khảo Twilio.docx  Tài liệu tổng hợp các mạch nguồn.docx
Watch_With_lgvl/libraries/: lv_conf.h
Watch_With_lgvl/libraries/TFT_eSPI_setups/: User_Setup_ESP32_ILI9341.h
Watch_With_lgvl/libraries/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h
Watch_With_lgvl/ui/: ui.ino
(+13 files in other folders)
